--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 reqwest = { version = "0.12", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 clap = { version = "4.5.20", features = ["derive"] }
+serde_json = { version = "*" }
+serde = { version = "*", features = ["derive"] }
